<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/phoneNumber_signIn"
        android:background="@android:color/holo_blue_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continue_with_phoneNumber"
        android:textColor="@android:color/white"
        android:padding="5dp"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        />

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="center"
        >
        <View
            android:layout_width="64dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn_choice"
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
        <View
            android:layout_width="64dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:layout_weight="1"/>
    </LinearLayout>

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint_text" />

    <EditText
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword" />


    <TextView
        android:id="@+id/not_registered_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered_remarque"
        android:textColor="@android:color/holo_blue_light"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        />




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <Button
            android:id="@+id/signIn_btn"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/signIn_text" />
    </FrameLayout>

</LinearLayout>