<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint_text" />


    <EditText
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/password_hint_text"
        android:inputType="textPassword" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <Button
            android:id="@+id/signUp_btn"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/signUp_text" />
    </FrameLayout>

</LinearLayout>